{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 34,
  "lineage": "1ee9a098-c50d-add3-0889-acfd3422bf9e",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/load-balancer-byteburguer-api",
            "metadata": [
              {
                "generation": 0,
                "name": "load-balancer-byteburguer-api",
                "namespace": "default",
                "resource_version": "3596",
                "uid": "cc832bfd-005c-4f2e-846c-4f8a3d1df652"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.138.117",
                "cluster_ips": [
                  "172.20.138.117"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31400,
                    "port": 8000,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "nome": "byteburguer"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "acc832bfd005c4f2e846c4f8a3d1df65-2051113477.us-west-2.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster.cluster",
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.byte-burguer",
            "module.eks.aws_iam_role.byte-burguer",
            "module.eks.aws_iam_role_policy_attachment.byte-burguer-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.byte-burguer-AmazonEKSVPCResourceController",
            "module.eks.aws_security_group.node_group_one",
            "module.vpc.aws_subnet.public_byte-burguer_subnet",
            "module.vpc.aws_vpc.byte-burguer",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:security-group/sg-08f2256fed6d8e078",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f2256fed6d8e078",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20240309235816979200000006",
            "name_prefix": "node_group_one",
            "owner_id": "822853697743",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c5fb2cf5cdff93b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.byte-burguer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_byte-burguer_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:route-table/rtb-01136bc9f99d04dda",
            "default_route_table_id": "rtb-01136bc9f99d04dda",
            "id": "rtb-01136bc9f99d04dda",
            "owner_id": "822853697743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe41195d27d29e30",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "byte-burguer"
            },
            "tags_all": {
              "Name": "byte-burguer"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c5fb2cf5cdff93b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.byte-burguer_gw",
            "module.vpc.aws_vpc.byte-burguer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "byte-burguer_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:internet-gateway/igw-0fe41195d27d29e30",
            "id": "igw-0fe41195d27d29e30",
            "owner_id": "822853697743",
            "tags": {
              "Name": "byte-burguer"
            },
            "tags_all": {
              "Name": "byte-burguer"
            },
            "vpc_id": "vpc-05c5fb2cf5cdff93b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.byte-burguer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef68bf23678875dc",
            "route_table_id": "rtb-01136bc9f99d04dda",
            "subnet_id": "subnet-0a2274b160924303d"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_byte-burguer_default",
            "module.vpc.aws_internet_gateway.byte-burguer_gw",
            "module.vpc.aws_subnet.public_byte-burguer_subnet",
            "module.vpc.aws_vpc.byte-burguer",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6a15cad11228433",
            "route_table_id": "rtb-01136bc9f99d04dda",
            "subnet_id": "subnet-03786f5843fa1aa1b"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_byte-burguer_default",
            "module.vpc.aws_internet_gateway.byte-burguer_gw",
            "module.vpc.aws_subnet.public_byte-burguer_subnet",
            "module.vpc.aws_vpc.byte-burguer",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_byte-burguer_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:subnet/subnet-0a2274b160924303d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2274b160924303d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822853697743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "byte-burguer"
            },
            "tags_all": {
              "Name": "byte-burguer"
            },
            "vpc_id": "vpc-05c5fb2cf5cdff93b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.byte-burguer",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:subnet/subnet-03786f5843fa1aa1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03786f5843fa1aa1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822853697743",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "byte-burguer"
            },
            "tags_all": {
              "Name": "byte-burguer"
            },
            "vpc_id": "vpc-05c5fb2cf5cdff93b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.byte-burguer",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "byte-burguer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:822853697743:vpc/vpc-05c5fb2cf5cdff93b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03192e28cd97f3853",
            "default_route_table_id": "rtb-01136bc9f99d04dda",
            "default_security_group_id": "sg-0a8417b5fd20556cd",
            "dhcp_options_id": "dopt-084c1f7a5d55f3f72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c5fb2cf5cdff93b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01136bc9f99d04dda",
            "owner_id": "822853697743",
            "tags": {
              "Name": "byte-burguer"
            },
            "tags_all": {
              "Name": "byte-burguer"
            }
          }
        }
      ]
    }
  ]
}